# poseidon

./: Cargo.toml  config.json
src/: grain.rs  main.rs  matrix.rs  permutation.rs  poseidon.rs  spec.rs
