[package]
name = "poseidon"
version = "0.2.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
subtle = { version = "2.3", default-features = false }
ff = { version = "0.13", features = ["derive"] }
halo2curves = {git="https://github.com/cuiweixie/halo2curves.git", branch = "dev", features = ["hex"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = { version = "0.99.18", features = ["deref"] }
serde_arrays = "0.1"

[dev-dependencies]
rand_core = { version = "0.6", default-features = false }

[features]
default = []
